Enhance ChatAE mod with AI Terminal functionality, including new terminal part and item implementations. Update Gradle build configuration to utilize Java 17 and streamline agent dependencies. Add README for project setup and usage instructions.