@@ -1,172 +1,131 @@
-package space.controlnet.chatae.blockentity;
+package space.controlnet.chatae.part;
 
 import appeng.api.config.Actionable;
-import appeng.api.networking.GridHelper;
 import appeng.api.networking.IGrid;
 import appeng.api.networking.IGridNode;
-import appeng.api.networking.IInWorldGridNodeHost;
-import appeng.api.networking.IManagedGridNode;
 import appeng.api.networking.crafting.CalculationStrategy;
 import appeng.api.networking.crafting.ICraftingCPU;
 import appeng.api.networking.crafting.ICraftingLink;
 import appeng.api.networking.crafting.ICraftingPlan;
-import appeng.api.networking.crafting.ICraftingRequester;
 import appeng.api.networking.crafting.ICraftingSimulationRequester;
 import appeng.api.networking.crafting.ICraftingSubmitResult;
-import appeng.api.networking.security.IActionHost;
 import appeng.api.networking.security.IActionSource;
+import appeng.api.parts.IPartHost;
+import appeng.api.parts.IPartItem;
+import appeng.api.parts.IPartModel;
 import appeng.api.stacks.AEItemKey;
 import appeng.api.stacks.AEKey;
-import appeng.api.stacks.GenericStack;
 import appeng.api.stacks.KeyCounter;
+import appeng.api.util.AECableType;
+import appeng.items.parts.PartModels;
+import appeng.parts.PartModel;
+import appeng.parts.reporting.AbstractDisplayPart;
 import dev.architectury.registry.menu.ExtendedMenuProvider;
+import dev.architectury.registry.menu.MenuRegistry;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
-import net.minecraft.nbt.CompoundTag;
 import net.minecraft.network.FriendlyByteBuf;
 import net.minecraft.network.chat.Component;
 import net.minecraft.resources.ResourceLocation;
+import net.minecraft.world.InteractionHand;
 import net.minecraft.world.entity.player.Inventory;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.inventory.AbstractContainerMenu;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.entity.BlockEntity;
-import net.minecraft.world.level.block.state.BlockState;
+import net.minecraft.world.phys.Vec3;
 import org.jetbrains.annotations.Nullable;
-import space.controlnet.chatae.ChatAERegistries;
+import space.controlnet.chatae.ChatAENetwork;
+import space.controlnet.chatae.forge.ForgePartRegistries;
 import space.controlnet.chatae.menu.AiTerminalMenu;
+import space.controlnet.chatae.terminal.AiTerminalData;
+import space.controlnet.chatae.terminal.AiTerminalHost;
 
-import java.util.ArrayList;
-import java.util.Comparator;
-import java.util.EnumSet;
-import java.util.List;
-import java.util.Locale;
-import java.util.Map;
-import java.util.Optional;
-import java.util.Set;
-import java.util.UUID;
+import java.util.*;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
 import java.util.stream.Collectors;
 
-public final class AiTerminalBlockEntity extends BlockEntity implements ExtendedMenuProvider, IInWorldGridNodeHost, IActionHost, ICraftingRequester {
-    private static final String NBT_NODE = "gridNode";
-    private static final long CRAFT_CALC_TIMEOUT_MS = 30000;
+public final class AiTerminalPart extends AbstractDisplayPart implements AiTerminalHost, ExtendedMenuProvider {
+    @PartModels
+    public static final ResourceLocation MODEL_OFF = new ResourceLocation("ae2", "part/terminal_off");
+    @PartModels
+    public static final ResourceLocation MODEL_ON = new ResourceLocation("ae2", "part/terminal_on");
 
-    private final IManagedGridNode mainNode;
-    private boolean nodeInitScheduled;
+    public static final IPartModel MODELS_OFF = new PartModel(MODEL_BASE, MODEL_OFF, MODEL_STATUS_OFF);
+    public static final IPartModel MODELS_ON = new PartModel(MODEL_BASE, MODEL_ON, MODEL_STATUS_ON);
+    public static final IPartModel MODELS_HAS_CHANNEL = new PartModel(MODEL_BASE, MODEL_ON, MODEL_STATUS_HAS_CHANNEL);
+
     private final Map<String, CraftJob> jobs = new ConcurrentHashMap<>();
 
-    public AiTerminalBlockEntity(BlockPos pos, BlockState state) {
-        super(ChatAERegistries.AI_TERMINAL_BE.get(), pos, state);
-
-        this.mainNode = GridHelper.createManagedNode(this, new NodeListener());
-        this.mainNode
+    public AiTerminalPart(IPartItem<?> partItem) {
+        super(partItem, true);
+        this.getMainNode()
                 .setInWorldNode(true)
-                .setExposedOnSides(EnumSet.allOf(Direction.class))
                 .setTagName("ai_terminal")
-                .setVisualRepresentation(ChatAERegistries.AI_TERMINAL_ITEM.get());
+                .setVisualRepresentation(ForgePartRegistries.AI_TERMINAL_PART_ITEM.get());
+    }
+
+    @Override
+    public void setPartHostInfo(Direction side, IPartHost host, BlockEntity blockEntity) {
+        super.setPartHostInfo(side, host, blockEntity);
+        this.getMainNode().setExposedOnSides(EnumSet.of(side));
+    }
+
+    @Override
+    public boolean onPartActivate(Player player, InteractionHand hand, Vec3 pos) {
+        if (player.level().isClientSide()) {
+            return true;
+        }
+        if (player instanceof net.minecraft.server.level.ServerPlayer serverPlayer) {
+            MenuRegistry.openExtendedMenu(serverPlayer, this);
+            ChatAENetwork.sendSessionSnapshot(serverPlayer);
+        }
+        return true;
     }
 
     @Override
     public Component getDisplayName() {
-        return Component.translatable("block.chatae.ai_terminal");
+        return Component.translatable("item.chatae.ai_terminal");
     }
 
     @Override
-    public @Nullable AbstractContainerMenu createMenu(int containerId, Inventory inventory, Player player) {
-        return new AiTerminalMenu(containerId, inventory, worldPosition);
+    public AbstractContainerMenu createMenu(int containerId, Inventory inventory, Player player) {
+        return new AiTerminalMenu(containerId, inventory, this, getHostPos(), getSide());
     }
 
     @Override
     public void saveExtraData(FriendlyByteBuf buf) {
-        buf.writeBlockPos(this.worldPosition);
+        buf.writeBlockPos(getHostPos());
+        buf.writeBoolean(true);
+        buf.writeEnum(getSide());
     }
 
     @Override
-    public void setLevel(Level level) {
-        super.setLevel(level);
-        if (!level.isClientSide() && !nodeInitScheduled) {
-            nodeInitScheduled = true;
-            GridHelper.onFirstTick(this, be -> be.mainNode.create(level, be.worldPosition));
-        }
+    public IPartModel getStaticModels() {
+        return this.selectModel(MODELS_OFF, MODELS_ON, MODELS_HAS_CHANNEL);
     }
 
     @Override
-    public void setRemoved() {
-        this.mainNode.destroy();
-        super.setRemoved();
+    public float getCableConnectionLength(AECableType cable) {
+        return 1;
     }
 
     @Override
-    public void load(CompoundTag tag) {
-        super.load(tag);
-        if (tag.contains(NBT_NODE)) {
-            this.mainNode.loadFromNBT(tag.getCompound(NBT_NODE));
-        }
-    }
-
-    @Override
-    protected void saveAdditional(CompoundTag tag) {
-        super.saveAdditional(tag);
-        CompoundTag nodeTag = new CompoundTag();
-        this.mainNode.saveToNBT(nodeTag);
-        tag.put(NBT_NODE, nodeTag);
-    }
-
-    @Override
-    public appeng.api.networking.IGridNode getGridNode(Direction direction) {
-        return this.mainNode.getNode();
-    }
-
-    public record Ae2Entry(String itemId, long amount, boolean craftable) {
-    }
-
-    public record Ae2ListResult(List<Ae2Entry> results, Optional<String> nextPageToken, Optional<String> error) {
-        public Ae2ListResult {
-            results = List.copyOf(results);
-            nextPageToken = nextPageToken == null ? Optional.empty() : nextPageToken;
-            error = error == null ? Optional.empty() : error;
-        }
-    }
-
-    public record Ae2PlanItem(String itemId, long amount) {
-    }
-
-    public record Ae2CraftSimulation(String jobId, String status, List<Ae2PlanItem> missingItems, Optional<String> error) {
-        public Ae2CraftSimulation {
-            missingItems = List.copyOf(missingItems);
-            error = error == null ? Optional.empty() : error;
-        }
-    }
-
-    public record Ae2CraftRequest(String jobId, String status, Optional<String> error) {
-        public Ae2CraftRequest {
-            error = error == null ? Optional.empty() : error;
-        }
-    }
-
-    public record Ae2JobStatus(String jobId, String status, List<Ae2PlanItem> missingItems, Optional<String> error) {
-        public Ae2JobStatus {
-            missingItems = List.copyOf(missingItems);
-            error = error == null ? Optional.empty() : error;
-        }
-    }
-
-    public Ae2ListResult listItems(String query, boolean craftableOnly, int limit, Optional<String> pageToken) {
-        Optional<IGrid> gridOpt = Optional.ofNullable(mainNode.getGrid());
+    public AiTerminalData.Ae2ListResult listItems(String query, boolean craftableOnly, int limit, @Nullable String pageToken) {
+        Optional<IGrid> gridOpt = Optional.ofNullable(getMainNode().getGrid());
         if (gridOpt.isEmpty()) {
-            return new Ae2ListResult(List.of(), Optional.empty(), Optional.of("AE2 network not connected"));
+            return new AiTerminalData.Ae2ListResult(List.of(), Optional.empty(), Optional.of("AE2 network not connected"));
         }
 
         IGrid grid = gridOpt.get();
-        KeyCounter inv = grid.getStorageService().getCachedInventory();
+        var inv = grid.getStorageService().getCachedInventory();
 
         String q = query == null ? "" : query.toLowerCase(Locale.ROOT).trim();
         int safeLimit = Math.max(1, Math.min(limit, 200));
-        int offset = pageToken.flatMap(AiTerminalBlockEntity::parseOffset).orElse(0);
+        int offset = parseOffsetNullable(pageToken).orElse(0);
 
         var craftables = craftableOnly ? grid.getCraftingService().getCraftables(AEItemKey.filter()) : null;
 
@@ -175,9 +134,9 @@ public final class AiTerminalBlockEntity extends BlockEntity implements Extended
                 .map(k -> (AEItemKey) k)
                 .filter(k -> q.isEmpty() || k.getId().toString().toLowerCase(Locale.ROOT).contains(q))
                 .sorted(Comparator.comparing(k -> k.getId().toString()))
-                .collect(Collectors.toList());
+                .toList();
 
-        List<Ae2Entry> out = new ArrayList<>(Math.min(safeLimit, keys.size()));
+        List<AiTerminalData.Ae2Entry> out = new ArrayList<>(Math.min(safeLimit, keys.size()));
         for (int i = offset; i < keys.size() && out.size() < safeLimit; i++) {
             AEItemKey key = keys.get(i);
             long amount = inv.get(key);
@@ -185,50 +144,52 @@ public final class AiTerminalBlockEntity extends BlockEntity implements Extended
             if (craftableOnly && !craftable) {
                 continue;
             }
-            out.add(new Ae2Entry(key.getId().toString(), amount, craftable));
+            out.add(new AiTerminalData.Ae2Entry(key.getId().toString(), amount, craftable));
         }
 
         Optional<String> next = (offset + safeLimit) < keys.size() ? Optional.of(Integer.toString(offset + safeLimit)) : Optional.empty();
-        return new Ae2ListResult(out, next, Optional.empty());
+        return new AiTerminalData.Ae2ListResult(out, next, Optional.empty());
     }
 
-    public Ae2ListResult listCraftables(String query, int limit, Optional<String> pageToken) {
-        Optional<IGrid> gridOpt = Optional.ofNullable(mainNode.getGrid());
+    @Override
+    public AiTerminalData.Ae2ListResult listCraftables(String query, int limit, @Nullable String pageToken) {
+        Optional<IGrid> gridOpt = Optional.ofNullable(getMainNode().getGrid());
         if (gridOpt.isEmpty()) {
-            return new Ae2ListResult(List.of(), Optional.empty(), Optional.of("AE2 network not connected"));
+            return new AiTerminalData.Ae2ListResult(List.of(), Optional.empty(), Optional.of("AE2 network not connected"));
         }
 
         IGrid grid = gridOpt.get();
         String q = query == null ? "" : query.toLowerCase(Locale.ROOT).trim();
         int safeLimit = Math.max(1, Math.min(limit, 200));
-        int offset = pageToken.flatMap(AiTerminalBlockEntity::parseOffset).orElse(0);
+        int offset = parseOffsetNullable(pageToken).orElse(0);
 
         List<AEItemKey> keys = grid.getCraftingService().getCraftables(AEItemKey.filter()).stream()
                 .filter(AEItemKey::is)
                 .map(k -> (AEItemKey) k)
                 .filter(k -> q.isEmpty() || k.getId().toString().toLowerCase(Locale.ROOT).contains(q))
                 .sorted(Comparator.comparing(k -> k.getId().toString()))
-                .collect(Collectors.toList());
+                .toList();
 
-        List<Ae2Entry> out = new ArrayList<>(Math.min(safeLimit, keys.size()));
+        List<AiTerminalData.Ae2Entry> out = new ArrayList<>(Math.min(safeLimit, keys.size()));
         for (int i = offset; i < keys.size() && out.size() < safeLimit; i++) {
             AEItemKey key = keys.get(i);
-            out.add(new Ae2Entry(key.getId().toString(), 0, true));
+            out.add(new AiTerminalData.Ae2Entry(key.getId().toString(), 0, true));
         }
 
         Optional<String> next = (offset + safeLimit) < keys.size() ? Optional.of(Integer.toString(offset + safeLimit)) : Optional.empty();
-        return new Ae2ListResult(out, next, Optional.empty());
+        return new AiTerminalData.Ae2ListResult(out, next, Optional.empty());
     }
 
-    public Ae2CraftSimulation simulateCraft(Player player, String itemId, long count) {
-        Optional<IGrid> gridOpt = Optional.ofNullable(mainNode.getGrid());
+    @Override
+    public AiTerminalData.Ae2CraftSimulation simulateCraft(Player player, String itemId, long count) {
+        Optional<IGrid> gridOpt = Optional.ofNullable(getMainNode().getGrid());
         if (gridOpt.isEmpty()) {
-            return new Ae2CraftSimulation("", "error", List.of(), Optional.of("AE2 network not connected"));
+            return new AiTerminalData.Ae2CraftSimulation("", "error", List.of(), Optional.of("AE2 network not connected"));
         }
 
         AEItemKey key = resolveKey(itemId);
         if (key == null) {
-            return new Ae2CraftSimulation("", "error", List.of(), Optional.of("Unknown item: " + itemId));
+            return new AiTerminalData.Ae2CraftSimulation("", "error", List.of(), Optional.of("Unknown item: " + itemId));
         }
 
         String jobId = UUID.randomUUID().toString();
@@ -236,7 +197,7 @@ public final class AiTerminalBlockEntity extends BlockEntity implements Extended
         jobs.put(jobId, job);
 
         ICraftingSimulationRequester requester = new SimulationRequester(player, this);
-        CompletableFuture<ICraftingPlan> future = toCompletable(gridOpt.get().getCraftingService().beginCraftingCalculation(level, requester, key, count, CalculationStrategy.REPORT_MISSING_ITEMS));
+        CompletableFuture<ICraftingPlan> future = toCompletable(gridOpt.get().getCraftingService().beginCraftingCalculation(getHostLevel(), requester, key, count, CalculationStrategy.REPORT_MISSING_ITEMS));
         future.whenComplete((plan, error) -> {
             if (error != null) {
                 jobs.put(jobId, job.withError("Crafting simulation failed: " + error.getMessage()));
@@ -246,22 +207,23 @@ public final class AiTerminalBlockEntity extends BlockEntity implements Extended
                 jobs.put(jobId, job.withError("Crafting simulation failed"));
                 return;
             }
-            List<Ae2PlanItem> missing = toPlanItems(plan.missingItems());
+            List<AiTerminalData.Ae2PlanItem> missing = toPlanItems(plan.missingItems());
             jobs.put(jobId, job.withPlan(plan, missing));
         });
 
-        return new Ae2CraftSimulation(jobId, job.state().name().toLowerCase(Locale.ROOT), job.missingItems(), Optional.empty());
+        return new AiTerminalData.Ae2CraftSimulation(jobId, job.state().name().toLowerCase(Locale.ROOT), job.missingItems(), Optional.empty());
     }
 
-    public Ae2CraftRequest requestCraft(Player player, String itemId, long count, Optional<String> cpuName) {
-        Optional<IGrid> gridOpt = Optional.ofNullable(mainNode.getGrid());
+    @Override
+    public AiTerminalData.Ae2CraftRequest requestCraft(Player player, String itemId, long count, @Nullable String cpuName) {
+        Optional<IGrid> gridOpt = Optional.ofNullable(getMainNode().getGrid());
         if (gridOpt.isEmpty()) {
-            return new Ae2CraftRequest("", "error", Optional.of("AE2 network not connected"));
+            return new AiTerminalData.Ae2CraftRequest("", "error", Optional.of("AE2 network not connected"));
         }
 
         AEItemKey key = resolveKey(itemId);
         if (key == null) {
-            return new Ae2CraftRequest("", "error", Optional.of("Unknown item: " + itemId));
+            return new AiTerminalData.Ae2CraftRequest("", "error", Optional.of("Unknown item: " + itemId));
         }
 
         String jobId = UUID.randomUUID().toString();
@@ -269,7 +231,7 @@ public final class AiTerminalBlockEntity extends BlockEntity implements Extended
         jobs.put(jobId, job);
 
         ICraftingSimulationRequester requester = new SimulationRequester(player, this);
-        CompletableFuture<ICraftingPlan> future = toCompletable(gridOpt.get().getCraftingService().beginCraftingCalculation(level, requester, key, count, CalculationStrategy.REPORT_MISSING_ITEMS));
+        CompletableFuture<ICraftingPlan> future = toCompletable(gridOpt.get().getCraftingService().beginCraftingCalculation(getHostLevel(), requester, key, count, CalculationStrategy.REPORT_MISSING_ITEMS));
         future.whenComplete((plan, error) -> {
             if (error != null) {
                 jobs.put(jobId, job.withError("Crafting calculation failed: " + error.getMessage()));
@@ -280,13 +242,13 @@ public final class AiTerminalBlockEntity extends BlockEntity implements Extended
                 return;
             }
 
-            List<Ae2PlanItem> missing = toPlanItems(plan.missingItems());
+            List<AiTerminalData.Ae2PlanItem> missing = toPlanItems(plan.missingItems());
             if (plan.simulation()) {
                 jobs.put(jobId, job.withPlan(plan, missing));
                 return;
             }
 
-            Level levelRef = this.level;
+            Level levelRef = getHostLevel();
             if (levelRef == null || levelRef.isClientSide()) {
                 jobs.put(jobId, job.withError("No server level"));
                 return;
@@ -298,7 +260,7 @@ public final class AiTerminalBlockEntity extends BlockEntity implements Extended
                 CraftJob current = jobs.getOrDefault(jobId, job);
                 IGrid grid = gridOpt.get();
                 ICraftingCPU target = selectCpu(grid.getCraftingService().getCpus(), cpuName);
-                if (cpuName.isPresent() && target == null) {
+                if (cpuName != null && !cpuName.isBlank() && target == null) {
                     jobs.put(jobId, current.withError("CPU unavailable"));
                     return;
                 }
@@ -319,26 +281,28 @@ public final class AiTerminalBlockEntity extends BlockEntity implements Extended
             });
         });
 
-        return new Ae2CraftRequest(jobId, job.state().name().toLowerCase(Locale.ROOT), Optional.empty());
+        return new AiTerminalData.Ae2CraftRequest(jobId, job.state().name().toLowerCase(Locale.ROOT), Optional.empty());
     }
 
-    public Ae2JobStatus jobStatus(String jobId) {
+    @Override
+    public AiTerminalData.Ae2JobStatus jobStatus(String jobId) {
         CraftJob job = jobs.get(jobId);
         if (job == null) {
-            return new Ae2JobStatus(jobId, "unknown", List.of(), Optional.of("Job not found"));
+            return new AiTerminalData.Ae2JobStatus(jobId, "unknown", List.of(), Optional.of("Job not found"));
         }
 
         job = refreshJob(job);
         jobs.put(jobId, job);
 
         Optional<String> error = job.error();
-        return new Ae2JobStatus(jobId, job.state().name().toLowerCase(Locale.ROOT), job.missingItems(), error);
+        return new AiTerminalData.Ae2JobStatus(jobId, job.state().name().toLowerCase(Locale.ROOT), job.missingItems(), error);
     }
 
-    public Ae2JobStatus cancelJob(String jobId) {
+    @Override
+    public AiTerminalData.Ae2JobStatus cancelJob(String jobId) {
         CraftJob job = jobs.get(jobId);
         if (job == null) {
-            return new Ae2JobStatus(jobId, "unknown", List.of(), Optional.of("Job not found"));
+            return new AiTerminalData.Ae2JobStatus(jobId, "unknown", List.of(), Optional.of("Job not found"));
         }
 
         if (job.link() != null) {
@@ -347,7 +311,64 @@ public final class AiTerminalBlockEntity extends BlockEntity implements Extended
 
         job = job.withState(CraftJobState.CANCELED);
         jobs.put(jobId, job);
-        return new Ae2JobStatus(jobId, job.state().name().toLowerCase(Locale.ROOT), job.missingItems(), job.error());
+        return new AiTerminalData.Ae2JobStatus(jobId, job.state().name().toLowerCase(Locale.ROOT), job.missingItems(), job.error());
+    }
+
+    @Override
+    public BlockPos getHostPos() {
+        var host = getHost();
+        return host != null ? host.getBlockEntity().getBlockPos() : BlockPos.ZERO;
+    }
+
+    @Override
+    public @Nullable Level getHostLevel() {
+        var host = getHost();
+        if (host == null) {
+            return null;
+        }
+        return host.getBlockEntity().getLevel();
+    }
+
+    @Override
+    public boolean isRemovedHost() {
+        var host = getHost();
+        return host == null || host.getPart(getSide()) != this || !host.isInWorld();
+    }
+
+    @Override
+    public com.google.common.collect.ImmutableSet<ICraftingLink> getRequestedJobs() {
+        return com.google.common.collect.ImmutableSet.copyOf(jobs.values().stream()
+                .map(CraftJob::link)
+                .filter(link -> link != null && !link.isCanceled() && !link.isDone())
+                .toList());
+    }
+
+    @Override
+    public long insertCraftedItems(ICraftingLink link, AEKey what, long amount, Actionable mode) {
+        IGrid grid = getMainNode().getGrid();
+        if (grid == null) {
+            return 0;
+        }
+        return grid.getStorageService().getInventory().insert(what, amount, mode, IActionSource.ofMachine(this));
+    }
+
+    @Override
+    public void jobStateChange(ICraftingLink link) {
+        jobs.values().stream()
+                .filter(job -> link.equals(job.link()))
+                .findFirst()
+                .ifPresent(job -> jobs.put(job.jobId(), job.withState(link.isDone() ? CraftJobState.DONE : CraftJobState.CANCELED)));
+    }
+
+    @Override
+    public IGridNode getActionableNode() {
+        return getMainNode().getNode();
+    }
+
+    @Override
+    public void removeFromWorld() {
+        this.jobs.clear();
+        super.removeFromWorld();
     }
 
     private static Optional<Integer> parseOffset(String token) {
@@ -356,6 +377,13 @@ public final class AiTerminalBlockEntity extends BlockEntity implements Extended
         } catch (NumberFormatException e) {
             return Optional.empty();
         }
+    }
+
+    private static Optional<Integer> parseOffsetNullable(@Nullable String token) {
+        if (token == null || token.isBlank()) {
+            return Optional.empty();
+        }
+        return parseOffset(token);
     }
 
     private AEItemKey resolveKey(String itemId) {
@@ -373,7 +401,7 @@ public final class AiTerminalBlockEntity extends BlockEntity implements Extended
     private static CompletableFuture<ICraftingPlan> toCompletable(java.util.concurrent.Future<ICraftingPlan> future) {
         return CompletableFuture.supplyAsync(() -> {
             try {
-                return future.get(CRAFT_CALC_TIMEOUT_MS, TimeUnit.MILLISECONDS);
+                return future.get(30000, TimeUnit.MILLISECONDS);
             } catch (TimeoutException e) {
                 throw new RuntimeException("Crafting calculation timed out", e);
             } catch (Exception e) {
@@ -382,11 +410,11 @@ public final class AiTerminalBlockEntity extends BlockEntity implements Extended
         });
     }
 
-    private static ICraftingCPU selectCpu(Set<ICraftingCPU> cpus, Optional<String> cpuName) {
-        if (cpuName.isEmpty()) {
+    private static ICraftingCPU selectCpu(Set<ICraftingCPU> cpus, @Nullable String cpuName) {
+        if (cpuName == null || cpuName.isBlank()) {
             return null;
         }
-        String target = cpuName.get().toLowerCase(Locale.ROOT);
+        String target = cpuName.toLowerCase(Locale.ROOT);
         for (ICraftingCPU cpu : cpus) {
             var name = cpu.getName();
             if (name != null && name.getString().toLowerCase(Locale.ROOT).contains(target)) {
@@ -396,16 +424,16 @@ public final class AiTerminalBlockEntity extends BlockEntity implements Extended
         return null;
     }
 
-    private static List<Ae2PlanItem> toPlanItems(KeyCounter counter) {
+    private static List<AiTerminalData.Ae2PlanItem> toPlanItems(KeyCounter counter) {
         if (counter == null || counter.isEmpty()) {
             return List.of();
         }
-        List<Ae2PlanItem> out = new ArrayList<>();
+        List<AiTerminalData.Ae2PlanItem> out = new ArrayList<>();
         for (var entry : counter) {
             AEKey key = entry.getKey();
             long amount = entry.getLongValue();
             if (key instanceof AEItemKey itemKey) {
-                out.add(new Ae2PlanItem(itemKey.getId().toString(), amount));
+                out.add(new AiTerminalData.Ae2PlanItem(itemKey.getId().toString(), amount));
             }
         }
         return out;
@@ -428,37 +456,7 @@ public final class AiTerminalBlockEntity extends BlockEntity implements Extended
         return job;
     }
 
-    @Override
-    public IGridNode getActionableNode() {
-        return mainNode.getNode();
-    }
-
-    @Override
-    public com.google.common.collect.ImmutableSet<ICraftingLink> getRequestedJobs() {
-        return com.google.common.collect.ImmutableSet.copyOf(jobs.values().stream()
-                .map(CraftJob::link)
-                .filter(link -> link != null && !link.isCanceled() && !link.isDone())
-                .toList());
-    }
-
-    @Override
-    public long insertCraftedItems(ICraftingLink link, AEKey what, long amount, Actionable mode) {
-        IGrid grid = mainNode.getGrid();
-        if (grid == null) {
-            return 0;
-        }
-        return grid.getStorageService().getInventory().insert(what, amount, mode, IActionSource.ofMachine(this));
-    }
-
-    @Override
-    public void jobStateChange(ICraftingLink link) {
-        jobs.values().stream()
-                .filter(job -> link.equals(job.link()))
-                .findFirst()
-                .ifPresent(job -> jobs.put(job.jobId(), job.withState(link.isDone() ? CraftJobState.DONE : CraftJobState.CANCELED)));
-    }
-
-    private record SimulationRequester(Player player, IActionHost host) implements ICraftingSimulationRequester {
+    private record SimulationRequester(Player player, AiTerminalHost host) implements ICraftingSimulationRequester {
         @Override
         public IActionSource getActionSource() {
             return IActionSource.ofPlayer(player, host);
@@ -473,15 +471,15 @@ public final class AiTerminalBlockEntity extends BlockEntity implements Extended
         FAILED
     }
 
-    private record CraftJob(String jobId, CraftJobState state, ICraftingLink link, List<Ae2PlanItem> missingItems, Optional<String> error) {
+    private record CraftJob(String jobId, CraftJobState state, ICraftingLink link, List<AiTerminalData.Ae2PlanItem> missingItems, Optional<String> error) {
         CraftJob {
             missingItems = missingItems == null ? List.of() : List.copyOf(missingItems);
             error = error == null ? Optional.empty() : error;
         }
 
-        CraftJob withPlan(ICraftingPlan plan, List<Ae2PlanItem> missing) {
+        CraftJob withPlan(ICraftingPlan plan, List<AiTerminalData.Ae2PlanItem> missing) {
             return new CraftJob(jobId, plan.simulation() ? CraftJobState.FAILED : CraftJobState.SUBMITTED, link, missing, plan.simulation()
-                    ? Optional.of("Missing items: " + missing.stream().map(Ae2PlanItem::itemId).collect(Collectors.joining(", ")))
+                    ? Optional.of("Missing items: " + missing.stream().map(AiTerminalData.Ae2PlanItem::itemId).collect(Collectors.joining(", ")))
                     : Optional.empty());
         }
 
@@ -489,7 +487,7 @@ public final class AiTerminalBlockEntity extends BlockEntity implements Extended
             return new CraftJob(jobId, CraftJobState.SUBMITTED, link, missingItems, error);
         }
 
-        CraftJob withMissingItems(List<Ae2PlanItem> missing) {
+        CraftJob withMissingItems(List<AiTerminalData.Ae2PlanItem> missing) {
             return new CraftJob(jobId, state, link, missing, error);
         }
 
@@ -499,23 +497,6 @@ public final class AiTerminalBlockEntity extends BlockEntity implements Extended
 
         CraftJob withState(CraftJobState state) {
             return new CraftJob(jobId, state, link, missingItems, error);
-        }
-    }
-
-    private final class NodeListener implements appeng.api.networking.IGridNodeListener<AiTerminalBlockEntity> {
-        @Override
-        public void onSaveChanges(AiTerminalBlockEntity host, appeng.api.networking.IGridNode node) {
-            host.setChanged();
-        }
-
-        @Override
-        public void onGridChanged(AiTerminalBlockEntity host, appeng.api.networking.IGridNode node) {
-            host.setChanged();
-        }
-
-        @Override
-        public void onStateChanged(AiTerminalBlockEntity host, appeng.api.networking.IGridNode node, appeng.api.networking.IGridNodeListener.State state) {
-            host.setChanged();
         }
     }
 }
